another trial to fixed distortion image on mobile RWD

--- a/css/queries.css
+++ b/css/queries.css
@@ -35,7 +35,10 @@
     }
 
     #emotion,
-    #coding{ width:100%;}
+    #coding{ 
+        width:100%;
+        height:auto;
+    }
 
     ul { padding-inline-start:20px; }
 
